; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_vars.c_findgroup.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/mail/extr_vars.c_findgroup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grouphead = type { i8*, %struct.grouphead* }

@groups = common dso_local global %struct.grouphead** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.grouphead* @findgroup(i8* %0) #0 {
  %2 = alloca %struct.grouphead*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca %struct.grouphead*, align 8
  store i8* %0, i8** %3, align 8
  %5 = load %struct.grouphead**, %struct.grouphead*** @groups, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @hash(i8* %6)
  %8 = getelementptr inbounds %struct.grouphead*, %struct.grouphead** %5, i64 %7
  %9 = load %struct.grouphead*, %struct.grouphead** %8, align 8
  store %struct.grouphead* %9, %struct.grouphead** %4, align 8
  br label %10

10:                                               ; preds = %33, %1
  %11 = load %struct.grouphead*, %struct.grouphead** %4, align 8
  %12 = icmp ne %struct.grouphead* %11, null
  br i1 %12, label %13, label %37

13:                                               ; preds = %10
  %14 = load %struct.grouphead*, %struct.grouphead** %4, align 8
  %15 = getelementptr inbounds %struct.grouphead, %struct.grouphead* %14, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  %17 = load i8, i8* %16, align 1
  %18 = sext i8 %17 to i32
  %19 = load i8*, i8** %3, align 8
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp eq i32 %18, %21
  br i1 %22, label %23, label %32

23:                                               ; preds = %13
  %24 = load %struct.grouphead*, %struct.grouphead** %4, align 8
  %25 = getelementptr inbounds %struct.grouphead, %struct.grouphead* %24, i32 0, i32 0
  %26 = load i8*, i8** %25, align 8
  %27 = load i8*, i8** %3, align 8
  %28 = call i64 @equal(i8* %26, i8* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %23
  %31 = load %struct.grouphead*, %struct.grouphead** %4, align 8
  store %struct.grouphead* %31, %struct.grouphead** %2, align 8
  br label %38

32:                                               ; preds = %23, %13
  br label %33

33:                                               ; preds = %32
  %34 = load %struct.grouphead*, %struct.grouphead** %4, align 8
  %35 = getelementptr inbounds %struct.grouphead, %struct.grouphead* %34, i32 0, i32 1
  %36 = load %struct.grouphead*, %struct.grouphead** %35, align 8
  store %struct.grouphead* %36, %struct.grouphead** %4, align 8
  br label %10

37:                                               ; preds = %10
  store %struct.grouphead* null, %struct.grouphead** %2, align 8
  br label %38

38:                                               ; preds = %37, %30
  %39 = load %struct.grouphead*, %struct.grouphead** %2, align 8
  ret %struct.grouphead* %39
}

declare dso_local i64 @hash(i8*) #1

declare dso_local i64 @equal(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
